[FIX] Fixed the playlist not showing "No Songs" when there weren't any

--- a/client/src/app/playlists/playlist/playlist.page.scss
+++ b/client/src/app/playlists/playlist/playlist.page.scss
@@ -21,3 +21,8 @@ ion-grid {
     border-bottom: 1px solid black;
   }
 }
+
+#no_songs {
+  text-align: center;
+  font-size: 30px;
+}
